[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other/Power_Bar1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Other/Power_Bar2.png" type="Texture" id=3]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -100.0
margin_right = -20.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TexturePowerBar" type="TextureProgress" parent="VBoxContainer"]
margin_right = 30.0
margin_bottom = 200.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3

[node name="ShotLabelHeader" type="Label" parent="."]
margin_left = 10.9262
margin_top = 10.3811
margin_right = 50.9262
margin_bottom = 24.3811
text = "Shot"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotLabel" type="Label" parent="ShotLabelHeader"]
margin_top = 14.3027
margin_right = 40.0
margin_bottom = 28.3027
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.5
margin_right = 100.0
margin_bottom = 9.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Distance" type="Label" parent="MarginContainer"]
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 9.5
margin_right = 100.0
margin_bottom = 29.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacebar_Continue" type="Label" parent="MarginContainer2"]
visible = false
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "Press <Enter> To Continue"
align = 1
valign = 1
